deleting live mode.
